[project]
name = "sprout-mcp"
version = "0.1.2"
description = "MCP server wrapping the Sprout Social Public API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
sprout-mcp = "sprout_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
